# api/applications/applications.swagger.json
@@ -48,6 +48,90 @@
         ]
       }
     },
+    "/v1/applications/child_objects": {
+      "post": {
+        "operationId": "Applications_GetChildObjects",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetChildObjectsRes"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/v1GetChildObjectsReq"
+            }
+          }
+        ],
+        "tags": [
+          "Applications"
+        ]
+      }
+    },
+    "/v1/applications/{automationName}/reconciled_objects": {
+      "post": {
+        "operationId": "Applications_GetReconciledObjects",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetReconciledObjectsRes"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "automationName",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "automationNamespace": {
+                  "type": "string"
+                },
+                "automationKind": {
+                  "$ref": "#/definitions/GetReconciledObjectsReqAutomationKind"
+                },
+                "kinds": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/definitions/v1GroupVersionKind"
+                  }
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "Applications"
+        ]
+      }
+    },
     "/v1/applications/{name}": {
       "get": {
         "summary": "GetApplication returns a given application",
@@ -139,6 +223,14 @@
     }
   },
   "definitions": {
+    "GetReconciledObjectsReqAutomationKind": {
+      "type": "string",
+      "enum": [
+        "Kustomize",
+        "Helm"
+      ],
+      "default": "Kustomize"
+    },
     "protobufAny": {
       "type": "object",
       "properties": {
@@ -192,6 +284,18 @@
           "items": {
             "$ref": "#/definitions/v1Condition"
           }
+        },
+        "namespace": {
+          "type": "string"
+        },
+        "deploymentType": {
+          "$ref": "#/definitions/v1GroupVersionKind"
+        },
+        "reconciledObjectKinds": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1GroupVersionKind"
+          }
         }
       }
     },
@@ -242,6 +346,53 @@
         }
       }
     },
+    "v1GetChildObjectsReq": {
+      "type": "object",
+      "properties": {
+        "groupVersionKind": {
+          "$ref": "#/definitions/v1GroupVersionKind"
+        },
+        "parentUid": {
+          "type": "string"
+        }
+      }
+    },
+    "v1GetChildObjectsRes": {
+      "type": "object",
+      "properties": {
+        "objects": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1UnstructuredObject"
+          }
+        }
+      }
+    },
+    "v1GetReconciledObjectsRes": {
+      "type": "object",
+      "properties": {
+        "objects": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/v1UnstructuredObject"
+          }
+        }
+      }
+    },
+    "v1GroupVersionKind": {
+      "type": "object",
+      "properties": {
+        "group": {
+          "type": "string"
+        },
+        "kind": {
+          "type": "string"
+        },
+        "version": {
+          "type": "string"
+        }
+      }
+    },
     "v1ListApplicationsResponse": {
       "type": "object",
       "properties": {
@@ -266,6 +417,26 @@
           "type": "integer",
           "format": "int32",
           "description": "A pagination token returned from a previous call\nthat indicates from where listing should continue."
+        }
+      }
+    },
+    "v1UnstructuredObject": {
+      "type": "object",
+      "properties": {
+        "groupVersionKind": {
+          "$ref": "#/definitions/v1GroupVersionKind"
+        },
+        "name": {
+          "type": "string"
+        },
+        "namespace": {
+          "type": "string"
+        },
+        "uid": {
+          "type": "string"
+        },
+        "status": {
+          "type": "string"
         }
       }
     }
