# pkg/api/applications/applications_grpc.pb.go
@@ -27,6 +27,8 @@ type ApplicationsClient interface {
 	//
 	// ListCommits returns the list of WeGo commits that the authenticated user has access to.
 	ListCommits(ctx context.Context, in *ListCommitsRequest, opts ...grpc.CallOption) (*ListCommitsResponse, error)
+	GetReconciledObjects(ctx context.Context, in *GetReconciledObjectsReq, opts ...grpc.CallOption) (*GetReconciledObjectsRes, error)
+	GetChildObjects(ctx context.Context, in *GetChildObjectsReq, opts ...grpc.CallOption) (*GetChildObjectsRes, error)
 }
 
 type applicationsClient struct {
@@ -64,6 +66,24 @@ func (c *applicationsClient) ListCommits(ctx context.Context, in *ListCommitsReq
 	return out, nil
 }
 
+func (c *applicationsClient) GetReconciledObjects(ctx context.Context, in *GetReconciledObjectsReq, opts ...grpc.CallOption) (*GetReconciledObjectsRes, error) {
+	out := new(GetReconciledObjectsRes)
+	err := c.cc.Invoke(ctx, "/wego_server.v1.Applications/GetReconciledObjects", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *applicationsClient) GetChildObjects(ctx context.Context, in *GetChildObjectsReq, opts ...grpc.CallOption) (*GetChildObjectsRes, error) {
+	out := new(GetChildObjectsRes)
+	err := c.cc.Invoke(ctx, "/wego_server.v1.Applications/GetChildObjects", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // ApplicationsServer is the server API for Applications service.
 // All implementations must embed UnimplementedApplicationsServer
 // for forward compatibility
@@ -77,6 +97,8 @@ type ApplicationsServer interface {
 	//
 	// ListCommits returns the list of WeGo commits that the authenticated user has access to.
 	ListCommits(context.Context, *ListCommitsRequest) (*ListCommitsResponse, error)
+	GetReconciledObjects(context.Context, *GetReconciledObjectsReq) (*GetReconciledObjectsRes, error)
+	GetChildObjects(context.Context, *GetChildObjectsReq) (*GetChildObjectsRes, error)
 	mustEmbedUnimplementedApplicationsServer()
 }
 
@@ -92,6 +114,12 @@ func (UnimplementedApplicationsServer) GetApplication(context.Context, *GetAppli
 }
 func (UnimplementedApplicationsServer) ListCommits(context.Context, *ListCommitsRequest) (*ListCommitsResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method ListCommits not implemented")
+}
+func (UnimplementedApplicationsServer) GetReconciledObjects(context.Context, *GetReconciledObjectsReq) (*GetReconciledObjectsRes, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetReconciledObjects not implemented")
+}
+func (UnimplementedApplicationsServer) GetChildObjects(context.Context, *GetChildObjectsReq) (*GetChildObjectsRes, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method GetChildObjects not implemented")
 }
 func (UnimplementedApplicationsServer) mustEmbedUnimplementedApplicationsServer() {}
 
@@ -160,6 +188,42 @@ func _Applications_ListCommits_Handler(srv interface{}, ctx context.Context, dec
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Applications_GetReconciledObjects_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetReconciledObjectsReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApplicationsServer).GetReconciledObjects(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/wego_server.v1.Applications/GetReconciledObjects",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApplicationsServer).GetReconciledObjects(ctx, req.(*GetReconciledObjectsReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Applications_GetChildObjects_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetChildObjectsReq)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ApplicationsServer).GetChildObjects(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/wego_server.v1.Applications/GetChildObjects",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ApplicationsServer).GetChildObjects(ctx, req.(*GetChildObjectsReq))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Applications_ServiceDesc is the grpc.ServiceDesc for Applications service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -178,6 +242,14 @@ var Applications_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "ListCommits",
 			Handler:    _Applications_ListCommits_Handler,
+		},
+		{
+			MethodName: "GetReconciledObjects",
+			Handler:    _Applications_GetReconciledObjects_Handler,
+		},
+		{
+			MethodName: "GetChildObjects",
+			Handler:    _Applications_GetChildObjects_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
